# public/openapi.yaml
@@ -13,6 +13,46 @@ servers:
 tags:
   - name: Security
 paths:
+  /api/security/request-forgotten-password:
+    post:
+      tags:
+        - Security
+      summary: Request Forgotten Password
+      description: Request a forgotten password
+      operationId: requestForgottenPassword
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/RequestForgottenPasswordRequest'
+      responses:
+        204:
+          description: No content
+        400:
+          description: Bad request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/BadRequestResponse'
+        403:
+          description: Forbidden
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ForbiddenResponse'
+        422:
+          description: Unprocessable entity
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/UnprocessableEntityResponse'
+        500:
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/InternalServerErrorResponse'
   /api/security/complete:
     post:
       tags:
@@ -238,7 +278,10 @@ components:
         - companyName
         - phoneNumber
       example:
-        code: 000001
+        firstName: John
+        lastName: Doe
+        companyName: My Company
+        phoneNumber: 0123456789
     VerifyEmailRequest:
       type: object
       properties:
@@ -248,6 +291,15 @@ components:
         - code
       example:
         code: 000001
+    RequestForgottenPasswordRequest:
+      type: object
+      properties:
+        email:
+          type: string
+      required:
+        - email
+      example:
+        email: user@email.com
     SignUpRequest:
       type: object
       properties:
