# src/Security/Domain/UseCase/RequestForgottenPassword/Input.php
@@ -1,0 +1,15 @@
+<?php
+
+declare(strict_types=1);
+
+namespace App\Security\Domain\UseCase\RequestForgottenPassword;
+
+use App\Core\Domain\Application\CQRS\Message\Command;
+use Symfony\Component\Validator\Constraints as Assert;
+
+final class Input implements Command
+{
+    #[Assert\NotBlank]
+    #[Assert\Email]
+    public string $email;
+}
